# AFF4-TSK-POC

./: CMakeLists.txt  Makefile  README.md  aff4_c_api.c  aff4_tsk_img.c  aff4_tsk_img.h  flake.nix  shell.nix  test.c
csharp/: Aff4Native.cs
